# routes/api.php
@@ -16,3 +16,10 @@ use Illuminate\Http\Request;
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+Route::apiResources([
+    'bikes' => 'API\BikeController',
+    'builders' => 'API\BuilderController',
+    'items' => 'API\ItemController',
+    'bikes/{bike}/ratings' => 'API\RatingController'
+]);
